--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
     <title>CardIT Advisory Services</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Manoj Adlakha">
@@ -29,23 +29,23 @@
     <meta name="twitter:title" content="CardIT Advisory Services">
     <meta name="twitter:description" content="A multidisciplinary organisation that provides value add in the field of payments and digitisation; premium and luxury experiences; leadership development; developing world class customer journey.">
     <!-- <meta name="twitter:creator" content="@"> -->
-    <meta name="twitter:image" content="img/logo.jpeg"/>
+    <meta name="twitter:image" content="img/logo.jpeg">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/themify-icons.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600" rel="stylesheet" type="text/css" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" >
+    <link href="css/themify-icons.css" rel="stylesheet" type="text/css" media="all" >
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" >
+    <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="all" >
+    <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" >
+    <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" >
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600" rel="stylesheet" type="text/css" >
   </head>
   <body>
     <div class="nav-container">
       <nav>
         <div class="nav-bar text-center">
           <div class="col-md-2 col-md-push-5 col-sm-12 text-center">
-              <img alt="logo" class="image-xs" src="img/logo-original.svg" height="200" />
+              <img alt="logo" class="image-xs" src="img/logo-original.svg" height="200" >
           </div>
           <div class="col-sm-12 col-md-5 col-md-pull-2 overflow-hidden-xs">
             <ul class="menu inline-block pull-right">
@@ -70,14 +70,14 @@
       <section class="fullscreen cover parallax image-bg overlay">
         <div class="background-image-holder">
           <video style="width: 100%;" autoplay muted>
-            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.mp4" type="video/mp4" >
             Your browser does not support the video tag.
           </video>
         </div>
         <div class="container v-align-transform">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <img alt="logo" class="image" src="img/logo.svg" height="300" />
+              <img alt="logo" class="image" src="img/logo.svg" height="300" >
               <h3 class="mb16">Advisory Services</h3>
               <h3>
                 Manoj Adlakha, CardIT Founder, Ex SVP & Head International Marketing, American Express, VISA, YES Bank, EY
@@ -135,7 +135,7 @@
             </div>
             <div class="col-md-5 col-sm-6 mb40 mb-xs-24">
               <i class="ti-wallet icon inline-block mb16 fade-3-4"></i>
-              <h4>Payments &amp; Digitisation<br /></h4>
+              <h4>Payments &amp; Digitisation<br ></h4>
               <p>
                 In an accelerated market, we collaborate with clients eager to join the digital revolution, providing agile, cost-effective financial solutions for seamless customer experiences and high ROI.
               </p>
@@ -159,7 +159,7 @@
             </div>
             <div class="col-md-5 col-md-offset-1 col-sm-6 mb40 mb-xs-24">
               <i class="ti-infinite icon inline-block mb16 fade-3-4"></i>
-              <h4>Customer Trends / Affluence / Experiences<br /></h4>
+              <h4>Customer Trends / Affluence / Experiences<br ></h4>
               <p>
                 In a nation with vast luxury consumption potential, we identify opportunities and craft exceptional value propositions, offering top-tier services through customers' preferred channels. We boost client value by assisting in
                 product line strategy, upselling, cross-selling, and leveraging their customer base for growth, maximizing shareholder returns. Leveraging customer as a platform for growth by cross selling and upselling.
@@ -188,7 +188,7 @@
             </div>
             <div class="col-md-5 col-sm-6 mb40 mb-xs-24">
               <i class="ti-fullscreen icon inline-block mb16 fade-3-4"></i>
-              <h4>Diversity, Equity & Inclusion<br /></h4>
+              <h4>Diversity, Equity & Inclusion<br ></h4>
               <p>
                 In a nation with ample room for diverse workplace representation, we offer top-notch statistics and best practices to keep clients ahead. With COVID's impact on mental health, our experts provide personalized and group
                 sessions addressing symptoms and solutions for employees in India and select international locations.
@@ -217,8 +217,8 @@
           <a href="https://www.newindianexpress.com/business/2021/sep/18/american-express-ropes-in-80000small-retailerswith-50-per-cent-cashback-incentive-to-customers-2360376.html">Supporting 80,000 Small Businesses During Covid</a>
           <a href="https://youtube.com/watch?v=X5cbOBi95uc&feature=share">ET Workforce CEO Fireside Chat - Future of Workplace</a>
           <a href="https://www.cardexpert.in/eazydiner-prime-review/">Partnerships - Eazydiner</a>
-          <br />
-          <br />
+          <br >
+          <br >
           <h5>Appointments / Awards & Accolades - Founder</h5>
           <a href="https://www.thestreet.com/investing/stocks/american-express-shakes-up-management-in-india-14081956">The Street - Amex rejigs Top Brass</a>
           <a href="https://www.adgully.com/american-express-appoints-manoj-adlakha-as-ceo-india-business-58804.html?amp=1">Appointment as CEO</a>
@@ -247,8 +247,8 @@
           <a href="https://www.linkedin.com/posts/manoj-adlakha-8882331_teamamex-amexindia-dontmakehistorywithoutit-activity-6854227241358913536-_1PN?utm_source=share&utm_medium=member_ios">Interaction with Mary Kom</a>
           <a href="https://www.linkedin.com/posts/manoj-adlakha-8882331_rahuldravid-amexturns100-teamamex-activity-6852184564727603200-UfZo?utm_source=share&utm_medium=member_ios">Interaction with Rahul Dravid</a>
           <a href="https://www.facebook.com/719808695/posts/pfbid0wLGg1KJHfTCN3ipbktdLTk5LJZioCiZH31vJCvru1nX2wcFXskpSZL5e98LTAu2Pl/?d=w&mibextid=kdkkhi">Interaction with Anil Kapoor</a>
-          <br />
-          <br />
+          <br >
+          <br >
           <h5>Personal Bytes - Founder</h5>
           <a href="https://internationalfinance.com/on-the-job-with-manoj-adlakha/">On The Job - International Finance</a>
           <a href="https://economictimes.indiatimes.com/magazines/panache/this-ceo-never-went-to-gym-but-now-has-set-up-one-at-home-amid-lockdown/articleshow/75667056.cms">ET Interaction - Personal Insights</a>
@@ -270,52 +270,52 @@
             <div class="logo-carousel">
               <ul class="slides">
                 <li>
-                  <img alt="RELIANCE RETAIL" src="img/experience/RELIANCE_RETAIL.svg" />
+                  <img alt="RELIANCE RETAIL" src="img/experience/RELIANCE_RETAIL.svg" >
                 </li>
                 <li>
-                  <img alt="AXP" src="img/experience/AXP.svg" />
+                  <img alt="AXP" src="img/experience/AXP.svg" >
                 </li>
                 <li>
-                  <img alt="EY" src="img/experience/EY.svg" />
+                  <img alt="EY" src="img/experience/EY.svg" >
                 </li>
                 <li>
-                  <img alt="DLF" src="img/experience/DLF.svg" />
+                  <img alt="DLF" src="img/experience/DLF.svg" >
                 </li>
                 <li>
-                  <img alt="CRED" src="img/experience/CRED.svg" />
+                  <img alt="CRED" src="img/experience/CRED.svg" >
                 </li>
                 <li>
-                  <img alt="Visa" src="img/experience/VISA.svg" />
+                  <img alt="Visa" src="img/experience/VISA.svg" >
                 </li>
                 <li>
-                  <img alt="TAJ" src="img/experience/TAJ.svg" />
+                  <img alt="TAJ" src="img/experience/TAJ.svg" >
                 </li>
                 <li>
-                  <img alt="PATH" src="img/experience/PATH_COMMUNITY.svg" />
+                  <img alt="PATH" src="img/experience/PATH_COMMUNITY.svg" >
                 </li>
                 <li>
-                  <img alt="VISTARA" src="img/experience/VISTARA.svg" />
+                  <img alt="VISTARA" src="img/experience/VISTARA.svg" >
                 </li>
                 <li>
-                  <img alt="BMW" src="img/experience/BMW.png" />
+                  <img alt="BMW" src="img/experience/BMW.png" >
                 </li>
                 <li>
-                  <img alt="Oberoi" src="img/experience/Oberoi.svg" />
+                  <img alt="Oberoi" src="img/experience/Oberoi.svg" >
                 </li>
                 <li>
-                  <img alt="MMT" src="img/experience/MAKE_MY_TRIP.png" />
+                  <img alt="MMT" src="img/experience/MAKE_MY_TRIP.png" >
                 </li>
                 <li>
-                  <img alt="IIFL" src="img/experience/IIFL.svg" />
+                  <img alt="IIFL" src="img/experience/IIFL.svg" >
                 </li>
                 <li>
-                  <img alt="Tata" src="img/experience/TATA_CLIQ.svg" />
+                  <img alt="Tata" src="img/experience/TATA_CLIQ.svg" >
                 </li>
                 <li>
-                  <img alt="Yes Bank" src="img/experience/YES_BANK.png" />
+                  <img alt="Yes Bank" src="img/experience/YES_BANK.png" >
                 </li>
                 <li>
-                  <img alt="QUOROM" src="img/experience/QUOROM.png" />
+                  <img alt="QUOROM" src="img/experience/QUOROM.png" >
                 </li>
               </ul>
             </div>
@@ -344,14 +344,14 @@
               </div>
               <div class="mb40 mb-xs-24">
                 <h5 class="uppercase bold mb16">EDUCATED AT</h5>
-                <img alt="Duke" src="img/education/duke.svg" height="50" />
-                <img alt="SRCC" src="img/education/srcc.png" height="50" />
-                <img alt="ICAI" src="img/education/icai.png" height="50" />
+                <img alt="Duke" src="img/education/duke.svg" height="50" >
+                <img alt="SRCC" src="img/education/srcc.png" height="50" >
+                <img alt="ICAI" src="img/education/icai.png" height="50" >
                 <i>The Institute of Chartered Accountants of India</i>
               </div>
             </div>
             <div class="col-sm-5 col-sm-6 col-sm-offset-1 text-center">
-              <img alt="linkedin_profile" src="img/linkedin_profile.jpeg" />
+              <img alt="linkedin_profile" src="img/linkedin_profile.jpeg" >
             </div>
           </div>
         </div>
@@ -368,34 +368,34 @@
             <div class="logo-carousel">
               <ul class="slides">
                 <li>
-                  <img alt="CNBC" src="img/news/CNBC.svg" />
+                  <img alt="CNBC" src="img/news/CNBC.svg" >
                 </li>
                 <li>
-                  <img alt="CNN" src="img/news/CNN.svg" />
+                  <img alt="CNN" src="img/news/CNN.svg" >
                 </li>
                 <li>
-                  <img alt="FORBES" src="img/news/FORBES.svg" />
+                  <img alt="FORBES" src="img/news/FORBES.svg" >
                 </li>
                 <li>
-                  <img alt="ET" src="img/news/ET.svg" />
+                  <img alt="ET" src="img/news/ET.svg" >
                 </li>
                 <li>
-                  <img alt="GQ" src="img/news/GQ.svg" />
+                  <img alt="GQ" src="img/news/GQ.svg" >
                 </li>
                 <li>
-                  <img alt="FORTUNE" src="img/news/FORTUNE.svg" />
+                  <img alt="FORTUNE" src="img/news/FORTUNE.svg" >
                 </li>
                 <li>
-                  <img alt="Harvard" src="img/news/HARVARD.svg" />
+                  <img alt="Harvard" src="img/news/HARVARD.svg" >
                 </li>
                 <li>
-                  <img alt="Logo" src="img/news/NDTV.svg" />
+                  <img alt="Logo" src="img/news/NDTV.svg" >
                 </li>
                 <li>
-                  <img alt="The Street" src="img/news/THE_STREET.svg" />
+                  <img alt="The Street" src="img/news/THE_STREET.svg" >
                 </li>
                 <li>
-                  <img alt="Live Mint" src="img/news/LIVE_MINT.svg" />
+                  <img alt="Live Mint" src="img/news/LIVE_MINT.svg" >
                 </li>
               </ul>
             </div>
@@ -404,7 +404,8 @@
       </section>
       <a id="videosection" class="in-page-link"></a>
       <section class="bg-secondary">
-        <div class="container" style="display: flex; justify-content: center; align-items: center">
+        <div class="container" style="display: flex; flex-direction: column; justify-content: center; align-items: center">
+          <h3>Mission Statement</h3>
           <iframe
             src="https://www.youtube.com/embed/si47q6PNNII?rel=0"
             title="YouTube video player"
@@ -444,27 +445,31 @@
           <div class="row">
             <div class="col-sm-12 col-md-12">
               <h4 class="uppercase">Get In Touch</h4>
-              <hr />
+              <hr >
               <p>
                 7th Floor, 703 DLF Galeria,
-                <br />
+                <br >
                 DLF Phase IV, Gurugram, 122002, Haryana
               </p>
-              <hr />
+              <hr >
               <p>
-                <strong>E:</strong>&nbsp;manoj@cardit.co.in<br />
-                <strong>P:</strong>&nbsp;‭+91 87504 96045‬<br />
+                <strong>E:</strong>&nbsp;manoj@cardit.co.in<br >
+                <strong>P:</strong>&nbsp;‭+91 87504 96045‬<br >
               </p>
             </div>
+          </div>
         </div>
       </section>
       <footer class="footer-2 bg-dark text-center-xs">
         <div class="container">
           <div class="row" style="display: flex; flex-direction: column; justify-content: flex-end; align-items: center;">
-              <a href="#"><img class="image-md" alt="Pic" src="img/logo-original.svg" /></a>
-              <span class="fade-half">
-                © Copyright 2023 CardIT Advisory Services. All Rights Reserved.
-              </span>
+            <a href="#">
+              <img class="image-md" alt="Pic" src="img/logo-original.svg" >
+            </a>
+            <span class="fade-half">
+              © Copyright 2023 CardIT Advisory Services. All Rights Reserved.
+            </span>
+          </div>
         </div>
       </footer>
     </div>
