--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <a id="videobanner" class="in-page-link"></a>
       <section class="fullscreen cover parallax image-bg overlay">
         <div class="background-image-holder">
-          <video style="width: 100%;" autoplay muted>
+          <video style="width: 100%;" autoplay muted playsinline>
             <source src="img/video.mp4" type="video/mp4" >
             Your browser does not support the video tag.
           </video>
